<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="411dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/darkblue"
            app:popupTheme="@style/Alamat_user.PopupOverlay"
            app:title="Tambah Alamat"
            app:titleTextColor="#fafafa" />
    </com.google.android.material.appbar.AppBarLayout>
    
     <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="Nama" />

    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="No Handphone"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/edt_nohp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:lines="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/provinsi"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/edt_provinsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/kota"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/edt_kota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/kecamatan"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/edt_kecamatan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="Kode Pos"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/edt_kodepos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/nama_jalan_gedung_no_rumah"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/edt_namajalan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/detail_lainnya_cth_blok_unit_no_patokan"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/edt_detailalamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:text="@string/tambah"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_button_tambah"/>

</LinearLayout>